// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConditionalWrapper /> renders alternateWrapper correctly 1`] = `
<div>
  <div
    class="alternateWrapper"
  >
    <span
      class="children"
    >
      children
    </span>
  </div>
</div>
`;

exports[`<ConditionalWrapper /> renders base component correctly 1`] = `
<div>
  <div
    class="wrapper"
  >
    <span
      class="children"
    >
      children
    </span>
  </div>
</div>
`;

exports[`<ConditionalWrapper /> renders children only is condition is false 1`] = `
<div>
  <span
    class="children"
  >
    children
  </span>
</div>
`;
